# pyN8Flow

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/template-python/: __init__.py
src/template-python/core/: __main__.py  workflow.py
