[tool.poetry]
name = "python_vorlage"
version = "0.1.0"
description = ""
authors = ["Nicolas Kokalj"]
readme = "README.md"
packages = [{include = "python_vorlage"}]

[tool.poetry.dependencies]
python = "^3.12,<3.13"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
mypy = "^1.10.0"
pyinstaller = "^6.8.0"
pytest = "^8.2.2"
poethepoet = "^0.27.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
lint = "ruff check ."
check = "ruff format ."
type = "mypy ."
coverage = "pytest --cov=python_vorlage"
build_exe = { cmd = "pyinstaller src/template-python/core/__main__.py", cwd = "." }
